--- a/style.css
+++ b/style.css
@@ -1,3 +1,38 @@
+*{ 
+  padding: 0;
+  margin: 0;
+}
+
+.container{
+  margin-left: 250px;
+}
+.list{
+  display: grid;
+  grid-template-columns: 13% 13% 25% 13% 13%;
+  grid-gap: 12px;
+  
+}
+.item{
+  border: 1px solid black;
+  border-radius: 15px;
+  background: #f7f7f7;
+  padding: 20px;
+}
+p{
+  text-align: center;
+  font-family: 'Times New Roman', Times, serif;
+}
+h1{
+  text-align: center;
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 50px;
+}
+.score{
+  text-align: center;
+  font-family: 'Lucida Sans';
+  font-weight: 600px;
+  font-size: 50px;
+}
 .footer{
   margin-left : 80px;
   font-size : 18px;
